# numerical-methods-p2

./: pyproject.toml
notebooks/: 01_check_module.ipynb
scripts/: run.py
src/: my_module.py
