[project]
name = "numerical-methods-p2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
]

[tool.uv]
package = true

[tool.setuptools]
packages = {find = {where = ["src"]}}
